...
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_detail" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:backgroundTint="@android:color/white"
        android:clickable="true"
        android:focusable="true"
...
