...
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ivPosterDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_padding"
                android:paddingBottom="@dimen/medium_padding"
                android:text="@string/overview"
                android:textColor="@color/primaryText"
...
